--- a/Downloads/Calculator-master/Calculator_V1/MainStoryBoard/Base.lproj/Main.storyboard
+++ b/Downloads/Calculator-master/Calculator_V1/MainStoryBoard/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="modButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BUy-Fd-5c0"/>
+                                                    <action selector="percenButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BUy-Fd-5c0"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sms-5p-kqt">
